--- a/PS3.Rmd
+++ b/PS3.Rmd
@@ -60,5 +60,16 @@ door_choice <- function(choice){
 
 door_choice(1)
 
+#2
+PlayGame <- function(door) {
+  car <- sample(1:3,1)
+  if (car == door) {
+    print("Congrats you just won a ner CAR!")
+  }
+  else {
+    print("Sorry, you loose. Keep trying")
+  }
+}
 
+PlayGame(door_choice(1))
 ```
