--- a/PS3.Rmd
+++ b/PS3.Rmd
@@ -58,27 +58,39 @@ door <- function(choice){ #Create the function
 #Test the first function
 door(3)
 
-#2 Crear Metodo.Function que sirve en el objeto door.  El argumento es la puerta que se selecciono
-PlayGame <- function(door) {
-  door_selected <- door$door_selected
-  car <- sample(1:3,1)
-  if (car == door_selected) {
+#2 Create a method, this one is for door object. The argument is the door choice
+#Generic function:
+PlayGame <- function(door){
+  UseMethod("PlayGame")
+}
+#Method function:
+PlayGame.door <- function(door) {
+  door_selected <- door$door_selected #Store the door selected in the first function
+  car <- sample(1:3,1) #Choose a number of door for the car prize
+  if (car == door_selected) { #Print Congrats in case is the same door
     print("Congrats you just won a new CAR!")
   }
-  else {
+  else { #Print Sorry in case is different door to the one which has the prize
     print("Sorry, you loose. Keep trying")
   }
 }
+#Test the second function
+PlayGame.door(door(2))
 
-PlayGame(door(2))
-
-#3 Validator. Esta function me va a crear el objeto door solo si es 1 2 3. Output=objeto con class door
+#3 This function is the validator. This function is going to create an object only if the door object is a 1,2, or 3. The output will be the door with the class. 
 
 new_door <- function(door_choice){
-  if(!(door_choice %in% c(1,2,3))) {
+  if(!(door_choice %in% c(1,2,3))) { #In case the selection is not between 1,2,3, it will print an error
     stop("Error: You need to choose a door between 1 to 3")
   }
   return(door(door_choice))
 }
+
+#Test the third function
 new_door(2)
+
+#Test the game:
+set.seed(1234)
+PlayGame.door(new_door(2))
+
 ```
