--- a/PS4.Rmd
+++ b/PS4.Rmd
@@ -38,32 +38,64 @@ First, create two new objects \texttt{polls} and \texttt{Endorsements}. Then com
 \begin{itemize}
   \item Change the \texttt{Endorsements} variable name endorsee to \texttt{candidate\_name}.
   \item Change the \texttt{Endorsements} dataframe into a \texttt{tibble} object.
+```{r}
+#Use rename function to change variable name 
+endorsements <- rename(Endorsements, candidate_name=endorsee) 
+#as_tibble  convert the data frame into tibble
+endorsements <- as_tibble(endorsements)
+#Endorsements is a tibble
+class(endorsements)
+```
+  
   \item Filter the \texttt{poll} variable to only include the following 6 candidates: Amy Klobuchar, Bernard Sanders,Elizabeth Warren, Joseph R. Biden Jr., Michael Bloomberg, Pete Buttigieg \textbf{and} subset the dataset to the following five variables: \texttt{candidate\_name, sample\_size, start\_date, party, pct}
+  
+```{r}
+#Use filter to subset the polls data and use select to only store the variables we are interested
+subset_polls <- polls %>%  filter(candidate_name %in% c("Amy Klobuchar", "Bernard Sanders", "Elizabeth Warren", "Joseph R. Biden Jr.", "Michael Bloomberg", "Pete Buttigieg")) %>% select(candidate_name, sample_size, start_date, party, pct) 
+
+```
+
   \item Compare the candidate names in the two datasets and find instances where the a candidates name is spelled differently i.e. Bernard vs. Bernie. Using only \texttt{dplyr} functions, make these the same across datasets. 
+  
+```{r}
+distinct(subset_polls, candidate_name) #Unique values in candidate_name
+#In the same object as before, change names that are spelled differently in endorsements
+subset_polls <- subset_polls %>% mutate(new_name = case_when(subset_polls$candidate_name == "Bernard Sanders" ~ "Bernie Sanders",
+                                        subset_polls$candidate_name == "Joseph R. Biden Jr." ~ "Joe Biden",
+                                        TRUE ~ as.character(subset_polls$candidate_name))) %>% rename(old_name=candidate_name, candidate_name=new_name)
+```
+
   \item Now combine the two datasets by candidate name using \texttt{dplyr} (there will only be five candidates after joining).
+  
+```{r}
+#Use inner_join to merge two tibbles/data frame
+join <- inner_join(endorsements, subset_polls, by="candidate_name")
+distinct(join, candidate_name)
+```
+  
   \item Create a variable which indicates the number of endorsements for each of the five candidates using \texttt{dplyr}.
+  
+```{r}
+#Filter the five candidates that we are interested. Apply summarise function to collapse and count the number of endorsements
+endorsements_count <- endorsements %>%   filter(candidate_name %in% c("Amy Klobuchar", "Bernie Sanders", "Elizabeth Warren", "Joe Biden", "Pete Buttigieg")) %>% group_by(candidate_name) %>%  summarise(count=n())
+join <- left_join(join, endorsements_count, by= "candidate_name")
+
+```
+  
+
+
   \item Plot the number of endorsement each of the 5 candidates have using \texttt{ggplot()}. Save your plot as an object \texttt{p}.
   \item Rerun the previous line as follows: \texttt{p + theme\_dark()}. Notice how you can still customize your plot without rerunning the plot with new options.
   \item Now, using the knowledge from the last step change the label of the X and Y axes to be more informative, add a title. Save the plot in your forked repository.
 \end{itemize}
 
-```{r eval=FALSE }
-#Use rename function to change variable name
-library(dplyr)
-endorsements <- Endorsements %>%  rename(candidate_name=endorsee) %>% as.tibble()
-endorsements_count <- endorsements %>%   filter(candidate_name %in% c("Amy Klobuchar", "Bernie Sanders", "Elizabeth Warren", "Joe Biden", "Pete Buttigieg")) %>% group_by(candidate_name) %>%  summarise(count=n())
-
-spolls <- polls %>%  filter(candidate_name %in% c("Amy Klobuchar", "Bernard Sanders", "Elizabeth Warren", "Joseph R. Biden Jr.", "Michael Bloomberg", "Pete Buttigieg")) %>% select(candidate_name, sample_size, start_date, party, pct) 
-
-spolls <- spolls %>% mutate(new_name = case_when(spolls$candidate_name == "Bernard Sanders" ~ "Bernie Sanders",
-                                        spolls$candidate_name == "Joseph R. Biden Jr." ~ "Joe Biden",
-                                        TRUE ~ as.character(spolls$candidate_name))) %>% rename(old_name=candidate_name, candidate_name=new_name)
-join <- left_join(spolls, endorsements_count, by="candidate_name")
-
+```{r }
 library(ggplot2)
-p <- ggplot(data=endorsements_count , aes(x=candidate_name, y=count)) +
-  geom_bar(stat="identity")
+p <- ggplot(data=endorsements_count , aes(x=reorder(candidate_name, -count), y=count)) +
+  geom_bar(stat="identity", fill="red")+ labs(x="Candidate Name", y="Number of Endorsements")
 p + theme_dark()
+?ggsave
+ggsave("plot.pdf", p)
 ```
 
 
