--- a/PS4.Rmd
+++ b/PS4.Rmd
@@ -25,7 +25,7 @@ Due Wednesday, March 16, 10:00 AM (Before Class) \\
 
 Your task in this problem set is to combine two datasets in order to observe how many endorsements each candidate received using only \texttt{dplyr} functions. Use the same Presidential primary polls that were used for the in class worksheets on February 28 and March 2.
 
-```{r eval=FALSE}
+```{r load-packages,include=FALSE}
 library(fivethirtyeight)
 library(tidyverse)
 # URL to the data that you've used.
@@ -38,63 +38,44 @@ First, create two new objects \texttt{polls} and \texttt{Endorsements}. Then com
 \begin{itemize}
   \item Change the \texttt{Endorsements} variable name endorsee to \texttt{candidate\_name}.
   \item Change the \texttt{Endorsements} dataframe into a \texttt{tibble} object.
-```{r}
-#Use rename function to change variable name 
-endorsements <- rename(Endorsements, candidate_name=endorsee) 
-#as_tibble  convert the data frame into tibble
-endorsements <- as_tibble(endorsements)
-#Endorsements is a tibble
-class(endorsements)
-```
-  
   \item Filter the \texttt{poll} variable to only include the following 6 candidates: Amy Klobuchar, Bernard Sanders,Elizabeth Warren, Joseph R. Biden Jr., Michael Bloomberg, Pete Buttigieg \textbf{and} subset the dataset to the following five variables: \texttt{candidate\_name, sample\_size, start\_date, party, pct}
-  
-```{r}
-#Use filter to subset the polls data and use select to only store the variables we are interested
-subset_polls <- polls %>%  filter(candidate_name %in% c("Amy Klobuchar", "Bernard Sanders", "Elizabeth Warren", "Joseph R. Biden Jr.", "Michael Bloomberg", "Pete Buttigieg")) %>% select(candidate_name, sample_size, start_date, party, pct) 
-
-```
-
   \item Compare the candidate names in the two datasets and find instances where the a candidates name is spelled differently i.e. Bernard vs. Bernie. Using only \texttt{dplyr} functions, make these the same across datasets. 
-  
-```{r}
-distinct(subset_polls, candidate_name) #Unique values in candidate_name
-#In the same object as before, change names that are spelled differently in endorsements
-subset_polls <- subset_polls %>% mutate(new_name = case_when(subset_polls$candidate_name == "Bernard Sanders" ~ "Bernie Sanders",
-                                        subset_polls$candidate_name == "Joseph R. Biden Jr." ~ "Joe Biden",
-                                        TRUE ~ as.character(subset_polls$candidate_name))) %>% rename(old_name=candidate_name, candidate_name=new_name)
-```
-
   \item Now combine the two datasets by candidate name using \texttt{dplyr} (there will only be five candidates after joining).
-  
-```{r}
-#Use inner_join to merge two tibbles/data frame
-join <- inner_join(endorsements, subset_polls, by="candidate_name")
-distinct(join, candidate_name)
-```
-  
   \item Create a variable which indicates the number of endorsements for each of the five candidates using \texttt{dplyr}.
-  
-```{r}
-#Filter the five candidates that we are interested. Apply summarise function to collapse and count the number of endorsements
-endorsements_count <- endorsements %>%   filter(candidate_name %in% c("Amy Klobuchar", "Bernie Sanders", "Elizabeth Warren", "Joe Biden", "Pete Buttigieg")) %>% group_by(candidate_name) %>%  summarise(count=n())
-join <- left_join(join, endorsements_count, by= "candidate_name")
-
-```
-  
-
-
   \item Plot the number of endorsement each of the 5 candidates have using \texttt{ggplot()}. Save your plot as an object \texttt{p}.
   \item Rerun the previous line as follows: \texttt{p + theme\_dark()}. Notice how you can still customize your plot without rerunning the plot with new options.
   \item Now, using the knowledge from the last step change the label of the X and Y axes to be more informative, add a title. Save the plot in your forked repository.
 \end{itemize}
 
 ```{r }
+#Use rename function to change variable name 
+endorsements <- rename(Endorsements, candidate_name=endorsee) 
+#as_tibble  convert the data frame into tibble
+endorsements <- as_tibble(endorsements)
+#Endorsements is a tibble
+class(endorsements)
+
+#Use filter to subset the polls data and use select to only store the variables we are interested
+subset_polls <- polls %>%  filter(candidate_name %in% c("Amy Klobuchar", "Bernard Sanders", "Elizabeth Warren", "Joseph R. Biden Jr.", "Michael Bloomberg", "Pete Buttigieg")) %>% select(candidate_name, sample_size, start_date, party, pct) 
+
+distinct(subset_polls, candidate_name) #Unique values in candidate_name
+#In the same object as before, change names that are spelled differently in endorsements
+subset_polls <- subset_polls %>% mutate(new_name = case_when(subset_polls$candidate_name == "Bernard Sanders" ~ "Bernie Sanders",
+                                        subset_polls$candidate_name == "Joseph R. Biden Jr." ~ "Joe Biden",
+                                        TRUE ~ as.character(subset_polls$candidate_name))) %>% rename(old_name=candidate_name, candidate_name=new_name)
+
+#Use inner_join to merge two tibbles/data frame
+join <- inner_join(endorsements, subset_polls, by="candidate_name")
+distinct(join, candidate_name)
+
+#Filter the five candidates that we are interested. Apply summarise function to collapse and count the number of endorsements
+endorsements_count <- endorsements %>%   filter(candidate_name %in% c("Amy Klobuchar", "Bernie Sanders", "Elizabeth Warren", "Joe Biden", "Pete Buttigieg")) %>% group_by(candidate_name) %>%  summarise(count=n())
+join <- left_join(join, endorsements_count, by= "candidate_name")
+#Use ggplot to create the plot and customize it 
 library(ggplot2)
 p <- ggplot(data=endorsements_count , aes(x=reorder(candidate_name, -count), y=count)) +
   geom_bar(stat="identity", fill="red")+ labs(x="Candidate Name", y="Number of Endorsements")
 p + theme_dark()
-?ggsave
 ggsave("plot.pdf", p)
 ```
 
@@ -111,8 +92,6 @@ library(wordcloud)
 library(readr)
 trump_tweets_url <- 'https://politicaldatascience.com/PDS/Datasets/trump_tweets.csv'
 tweets <- read_csv(trump_tweets_url)
-
-
 ```
 
 \begin{itemize}
@@ -120,42 +99,57 @@ tweets <- read_csv(trump_tweets_url)
   \item Using \texttt{dplyr} subset the data to only include original tweets (remove retweents) and show the text of the President's \textbf{top 5} most popular and most retweeted tweets. (Hint: The \texttt{match} function can help you find the index once you identify the largest values.) 
   \item Create a \textit{corpus} of the tweet content and put this into the object \texttt{Corpus} using the \texttt{tm} (text mining) package. (Hint: Do the assigned readings.)
   \item Remove extraneous whitespace, remove numbers and punctuation, convert everything to lower case and remove 'stop words' that have little substantive meaning (the, a, it).
-  \item Now create a \texttt{wordcloud} to visualize the top 50 words the President uses in his tweets. Use only words that occur at least three times. Display the plot with words in random order and use 50 random colors. Save the plot into your forked repository.\item Create a \textit{document term matrix} called \texttt{DTM} that includes the argument \texttt{ control = list(weighting = weightTfIdf)}
+  \item Now create a \texttt{wordcloud} to visualize the top 50 words the President uses in his tweets. Use only words that occur at least three times. Display the plot with words in random order and use 50 random colors. Save the plot into your forked repository.\item
+  Create a \textit{document term matrix} called \texttt{DTM} that includes the argument \texttt{ control = list(weighting = weightTfIdf)}
   \item Finally, report the 50 words with the the highest tf.idf scores using a lower frequency bound of .8.
 \end{itemize}
-```{r}
-#1
+
+```{r tidy=TRUE}
+#Use the separate function to separate the two values in two variables. Then use the as.Date function to indicate is a date
 s_tweets <- tweets %>% separate(created_at, into = c("sdate", "stime"), sep = " ") %>% mutate(dates = as.Date(sdate, "%m/%d/%Y"))
-#Me falta reportar el rango
-#2
-top5_rt <- s_tweets %>% filter(is_retweet==FALSE) %>% slice_max( retweet_count, n = 5)
+#Report the ranges of dates with summarise function and min and max arguments
+s_tweets %>% summarise(min = min(dates),
+            max = max(dates)) 
 
+#Use slice_max and filter to show the top 5 most popular and retweeted tweets. 
+top5_rt <- s_tweets %>% filter(is_retweet==FALSE) %>% slice_max(retweet_count, n = 5)
 top5_fav <- s_tweets %>% filter(is_retweet==FALSE) %>% slice_max(favorite_count, n = 5)
+knitr::kable(top5_rt$text)
+knitr::kable(top5_fav$text)
 
-#Falta match
-
-#3
-
+s_tweets$text <- gsub(" ?(f|ht)tp(s?)://(.*)[.][a-z]+", "", s_tweets$text) #Remove URLS from the begining
+#Use Vcorpus function to create a corpus of Trump's tweets
 Corpus_trump <- VCorpus(VectorSource(s_tweets$text))
+inspect(Corpus_trump[[1]])
 
-inspect(Corpus_trump[[2]])
+Corpus_trump  <- Corpus_trump %>%  tm_map(stripWhitespace) %>% #remove whitespace
+                  tm_map(content_transformer(tolower)) %>% #to lower case all letters
+                   tm_map(removeWords, stopwords("english")) %>% #remove stop words
+                    tm_map(removeNumbers) %>% #remove numbers
+                      tm_map(removePunctuation) #remove punctuation
 
-#4
-Corpus_trump  <- Corpus_trump %>%  tm_map(stripWhitespace) %>% 
-                  tm_map(content_transformer(tolower)) %>% 
-                   tm_map(removeWords, stopwords("english")) %>% 
-                    tm_map(removeNumbers) %>% 
-                      tm_map(removePunctuation)
-                    
-#5
+library(randomcoloR)
+n <- 50
+palette <- distinctColorPalette(n)
 set.seed(1234) # for reproducibility 
-wordcloud(Corpus_trump, min.freq = 1,           max.words=50, random.order=FALSE, rot.per=0.35,            colors=brewer.pal(8, "Dark2"))
+#Use wordcloud function to visualize the top 50 words
+wordcloud(Corpus_trump, min.freq = 3,max.words=50, random.order=FALSE, rot.per=0.35,colors=palette)
 
-#6
+```
+```{r}
+#Create a dtm 
+dtm <- TermDocumentMatrix(Corpus_trump, control = list(weighting= weightTfIdf))
+```
 
-tdm <- TermDocumentMatrix(Corpus_trump, control = list(weighting
-= weightTfIdf))
 
-
+```{r}
+dtm_sparse <- removeSparseTerms(dtm, .99)
+inspect(dtm_sparse)
+#Find the 50 words with highest tf.idf
+dtm_matrix <- as.matrix(dtm_sparse)
+dim(dtm_matrix)
+#Sum all the words throughout the documents and in this sense, we can calculate the 50 top words
+topwords <- data.frame(word=rownames(dtm_matrix), score=rowSums(dtm_matrix)) %>% slice_max(score, n =50) #Top 50 words
+knitr::kable(topwords)
 ```
 
